# ethnidata

./: .coveragerc  .dockerignore  .gitignore  CHANGELOG.md  DATA_SUMMARY.md  DATA_SUMMARY_FINAL.md  Dockerfile  GITHUB_PYPI_GUIDE.md  LICENSE  MANIFEST.in  Makefile  PUBLISH.md  PUBLISHING.md  QUICK_START.md  README.md  README_V3_INFO.md  ROADMAP_v2.0.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py.bak
.github/workflows/: ci.yml  publish.yml
announcements/: EMAIL_TEMPLATE.md  EMAIL_TEMPLATE_V2.md  EMAIL_TEMPLATE_V3.md  LINKEDIN_POST.md  LINKEDIN_POST_V2.md  LINKEDIN_POST_V3.md  README.md  TWITTER_POSTS.md  TWITTER_POSTS_V2.md  TWITTER_POSTS_V3.md  V2_ANNOUNCEMENT.md  VISUAL_DESIGN_GUIDE.md  generate_graphs.py
docs/: API.md  QUICKSTART.md  changelog.md  index.md
ethnidata/: __init__.py  downloader.py  explainability.py  morphology.py  predictor.py  predictor_old.py
ethnidata/data_sources/: __init__.py  census.py  kaggle.py  religious.py  ssa_names.py  wikidata.py
ethnidata/synthetic/: __init__.py  engine.py
examples/: demo.py
scripts/: 10_comprehensive_data_sources.py  11_generate_synthetic_data.py  12_final_merge_all.py  12_final_merge_all_optimized.py  13_create_database_direct.py  14_create_database_sampled.py  15_fetch_religion_data.py  16_create_full_database_with_religion.py  17_add_religion_to_existing_db.py  18_normalize_all_countries.py  19_generate_synthetic_religious_names.py  1_fetch_names_dataset.py  20_generate_christian_african_names.py  21_create_mega_database.py  22_expand_synthetic_combinations.py  23_massive_expansion.py  24_massive_synthetic_generation.py  25_smart_massive_generation.py  26_ultra_massive_generation.py  27_practical_massive_generation.py  28_fast_massive_expansion.py  29_fix_religions_expand_judaism.py  2_fetch_wikipedia.py  2b_fetch_wikipedia_small.py  3_fetch_olympics.py  4_fetch_phone_directories.py  5_merge_all_data.py  5_merge_simple.py  6_create_database.py  7_fetch_additional_sources.py  8_merge_all_enhanced.py
tests/: __init__.py  test_coverage.py  test_data_sources.py  test_extended.py  test_predictor.py
