[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ethnidata"
version = "3.1.0"
description = "Predict nationality, ethnicity, gender, region, language and religion from names - 238 countries, 6 major religions, 5.9M+ names, complete religious coverage"
readme = "README.md"
authors = [{name = "Teyfik OZ", email = "teyfikoz@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["names", "nationality", "ethnicity", "demographics", "prediction", "NLP"]
dependencies = [
    "pycountry>=22.3.5",
    "unidecode>=1.3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
build = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "tqdm>=4.65.0",
    "wikipedia-api>=0.6.0",
    "sqlalchemy>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/teyfikoz/ethnidata"
Documentation = "https://github.com/teyfikoz/ethnidata#readme"
Repository = "https://github.com/teyfikoz/ethnidata.git"
Issues = "https://github.com/teyfikoz/ethnidata/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ethnidata*"]

[tool.setuptools.package-data]
ethnidata = ["*.db"]
