[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ethnidata"
version = "4.1.0"
description = "Production-Grade Explainable Name Analysis: nationality, ethnicity, gender, religion prediction with morphology detection, Shannon entropy ambiguity scoring, confidence breakdown - 238 countries, 6 religions, 5.9M+ names, 100% offline!"
readme = "README.md"
authors = [{name = "Teyfik OZ", email = "teyfikoz@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["names", "nationality", "ethnicity", "demographics", "prediction", "NLP", "explainable-ai", "morphology", "cultural-patterns", "transparency", "religion", "gender"]
dependencies = [
    "pycountry>=22.3.5",
    "unidecode>=1.3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
build = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "tqdm>=4.65.0",
    "wikipedia-api>=0.6.0",
    "sqlalchemy>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/teyfikoz/ethnidata"
Documentation = "https://github.com/teyfikoz/ethnidata#readme"
Repository = "https://github.com/teyfikoz/ethnidata.git"
Issues = "https://github.com/teyfikoz/ethnidata/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ethnidata*"]

[tool.setuptools.package-data]
ethnidata = ["*.db"]
